--- a/sources/Makefile
+++ b/sources/Makefile
@@ -1,49 +1,49 @@
-# 	NuSYSTEM samples nu0 Makefile
-#       Copyright (C) 1997-1999, NINTENDO Co,Ltd.
-
 include $(ROOT)/usr/include/make/PRdefs
 
-# The directory which has the indclude file and library of NuSYSTEM
-#
-NUSYSINCDIR  = $(N64KITDIR)/nusys/include
-NUSYSLIBDIR  = $(N64KITDIR)/nusys/lib
+RM = rm
+MAKEMASK = makemask
+
+NUSYSINCDIR = $(N64KITDIR)/nusys/include
+NUSYSLIBDIR = $(N64KITDIR)/nusys/lib
 
 LIB = $(ROOT)/usr/lib
 LPR = $(LIB)/PR
 INC = $(ROOT)/usr/include
 
-LCDEFS =	-DNU_DEBUG -DF3DEX_GBI_2
-LCINCS =	-I. -I$(NUSYSINCDIR) -I$(ROOT)/usr/include/PR
-LCOPTS =	-G 0
+LCDEFS = -DNU_DEBUG -DF3DEX_GBI_2
+LCINCS = -I. -I$(NUSYSINCDIR) -I$(ROOT)/usr/include/PR
+LCOPTS = -G 0
 LDFLAGS = $(MKDEPOPT) -L$(LIB) -L$(NUSYSLIBDIR) -lnusys_d -lgultra_d -L$(GCCDIR)/MIPSE/LIB -lkmc
 
 OPTIMIZER =	-g
 
-APP =		nu0.out
+APP = nu0.out
 
-TARGETS =	nu0.n64
+TARGETS = nu0.n64
 
-HFILES =	graphic.h
+HFILES = graphic.h
 
-CODEFILES   = 	main.c stage00.c graphic.c gfxinit.c
+CODEFILES = main.c stage00.c graphic.c gfxinit.c
 
-CODEOBJECTS =	$(CODEFILES:.c=.o)  $(NUSYSLIBDIR)/nusys.o
+CODEOBJECTS = $(CODEFILES:.c=.o)
 
-DATAFILES   =	
+DATAFILES =
 
-DATAOBJECTS =	$(DATAFILES:.c=.o)
+DATAOBJECTS = $(DATAFILES:.c=.o)
 
-CODESEGMENT =	codesegment.o
+CODESEGMENT = codesegment.o
 
-OBJECTS =	$(CODESEGMENT) $(DATAOBJECTS)
+OBJECTS = $(CODESEGMENT) $(DATAOBJECTS)
 
-
-default:        $(TARGETS)
+default: $(TARGETS)
 
 include $(COMMONRULES)
+clean:
+	$(RM) -f $(OBJECTS) $(CODEOBJECTS) $(APP) $(TARGETS) a.out
 
-$(CODESEGMENT):	$(CODEOBJECTS) Makefile
-		$(LD) -o $(CODESEGMENT) -r $(CODEOBJECTS) $(LDFLAGS)
+$(CODESEGMENT):	$(CODEOBJECTS)
+	$(LD) -o $(CODESEGMENT) -r $(CODEOBJECTS) $(NUSYSLIBDIR)/nusys.o $(LDFLAGS)
 
 $(TARGETS):	$(OBJECTS)
-		$(MAKEROM) -s16 spec -I$(NUSYSINCDIR) -r $(TARGETS) -e $(APP)
+	$(MAKEROM) -s16 spec -I$(NUSYSINCDIR) -r $(TARGETS) -e $(APP)
+	$(MAKEMASK) $(TARGETS)
