Add title screen

--- a/assets/graphics/Makefile
+++ b/assets/graphics/Makefile
@@ -4,6 +4,9 @@ TRANS = $(N64KITDIR)/niff/mtv/exe/trans
 %32x32_CI_4b.h: %32x32_CI_4b.sgi
 	$(TRANS) -s 4 -f CI -w 32 -h 32 -o $@ $<
 
+%32x32_CI_8b.h: %32x32_CI_8b.sgi
+	$(TRANS) -s 8 -f CI -w 32 -h 32 -o $@ $<
+
 %32x32_RGBA_16b.h: %32x32_RGBA_16b.sgi
 	$(TRANS) -s 16 -f RGBA -w 32 -h 32 -o $@ $<
 
