Link with non-debug audio libs

--- a/sources/Makefile
+++ b/sources/Makefile
@@ -16,7 +16,7 @@ INC = $(ROOT)/usr/include
 LCDEFS = -DF3DEX_GBI_2 -DN_AUDIO
 LCINCS = -I. -I$(NUSYSINCDIR) -I$(NUSTDINCDIR) -I$(ROOT)/usr/include/PR
 LCOPTS = -G 0
-LDFLAGS = $(MKDEPOPT) -L$(LIB) -L$(NUSYSLIBDIR) -L$(NUSTDLIBDIR) -L$(GCCDIR)/MIPSE/LIB -lnualstl_n_d -ln_gmus_d -ln_gaudio_sc -lnusys -lnustd -lgultra -lkmc
+LDFLAGS = $(MKDEPOPT) -L$(LIB) -L$(NUSYSLIBDIR) -L$(NUSTDLIBDIR) -L$(GCCDIR)/MIPSE/LIB -lnualstl_n -ln_gmus -ln_gaudio_sc -lnusys -lnustd -lgultra -lkmc
 
 OPTIMIZER = -g
 
